# Python-Visual-Similarity

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  publish_pypi.yml
docs/: image_store.md  overview.md  typing.md
docs/clustering/: README.md
docs/dataset/: README.md  oxford_flower_dataset.md
docs/encoders/: README.md  base_encoder.md  fisher_vector.md  pipeline.md  vlad.md  weights.md
docs/features/: README.md  deep_conv_feature.md  lambda.md  rootsift.md  sift.md
docs/neural_networks/: README.md
docs/retrieval/: README.md
examples/: README.md  clustering_images_using_fv.ipynb  clustering_images_using_pipeline.ipynb  clustering_images_using_vlad.ipynb  getting_started.ipynb  m_ap_and_top_k_accuracy.ipynb  pipeline.ipynb
pyvisim/: __init__.py  _base_classes.py  _config.py  _errors.py  _utils.py  eval.py  functional.py
pyvisim/clustering/: __init__.py  _base_clustering.py  gmm.py  kmeans.py  pca.py
pyvisim/datasets/: __init__.py  datasets.py
pyvisim/encoders/: README.md  __init__.py  _base_encoder.py  _reconstruct.py  _serialization.py  clip.py  fisher_vector.py  pipeline.py  utils.py  vlad.py
pyvisim/features/: README.md  __init__.py  _deep_conv_feature.py  _features.py  _lambda.py  _registry.py  _root_sift.py  _sift.py  _utils.py
pyvisim/image_store/: __init__.py  image_store.py
pyvisim/lazy_import/: __init__.py  lazy_import.py  torch_backend.py
pyvisim/neural_networks/: README.md  __init__.py  siamese_neural_network.py  train_siamese_neural_network.py
pyvisim/res/model_files/: fisher_oxford102_k256_rootsift.encoder  fisher_oxford102_k256_rootsift_pca.encoder  fisher_oxford102_k256_sift.encoder  fisher_oxford102_k256_sift_pca.encoder  fisher_oxford102_k256_vgg16_pca.encoder  vlad_oxford102_k256_rootsift.encoder  vlad_oxford102_k256_rootsift_pca.encoder  vlad_oxford102_k256_sift.encoder  vlad_oxford102_k256_sift_pca.encoder  vlad_oxford102_k256_vgg16.encoder  vlad_oxford102_k256_vgg16_pca.encoder
pyvisim/retrieval/: __init__.py  image_retriever.py
pyvisim/retrieval/index/: __init__.py  _base_index.py  image_index.py
pyvisim/typing/: __init__.py  encoders.py  index.py  numeric.py  store.py
tests/: CLAUDE.md  conftest.py
tests/clustering/: test_base_clustering.py  test_gmm.py  test_kmeans.py  test_pca.py
tests/datasets/: test_datasets.py
tests/encoders/: test_base_encoder.py  test_behavioural.py  test_fisher_vector.py  test_pipeline.py  test_vlad.py
tests/encoders/base/: test_base_encoder.py  test_pretrained.py
tests/encoders/clip/: test_clip.py  test_clip_unit.py
tests/encoders/fisher/: test_behavioral.py  test_fisher.py
tests/encoders/pipeline/: test_behavioral.py  test_pipeline.py
tests/encoders/vlad/: test_behavioral.py  test_vlad.py
tests/eval/: test_eval.py
tests/features/: test_features.py
tests/functional/: test_functional.py
tests/image_store/: test_image_store.py
tests/retrieval/: test_image_index.py  test_image_retriever.py
