[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyvisim"
version = "0.1.3"
description = "A Python library for image similarity analysis using Image Encoders and Neural Networks"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Nhat Huy Vu", email = "vunhathuy234@gmail.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "h5py",
    "joblib",
    "matplotlib",
    "numpy",
    "opencv-python",
    "pandas",
    "platformdirs",
    "pyaml",
    "PyYAML",
    "scikit-learn",
    "scipy",
    "seaborn",
    "torch",
    "torchvision",
    "torchaudio",
    "tqdm",
    "requests",
]

# To install PyTorch with CUDA support instead of the CPU-only default:
#   uv pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu124
# Replace cu124 with the CUDA version matching your system (e.g. cu121, cu118).

[project.urls]
Homepage = "https://github.com/MechaCritter/Python-Visual-Similarity"

[tool.setuptools.packages.find]
include = ["pyvisim", "pyvisim.*"]

[tool.setuptools.package-data]
pyvisim = ["res/model_files/*.pkl", "res/logging_config.yaml"]

# Dependencies groups to isolate test env from production env
[dependency-groups]
types = [
  "mypy",
]
dead-code = [
  "vulture",
]
fmt = [
  "ruff",
]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
no_implicit_optional = true
check_untyped_defs = true
exclude = ["^build/", "^dist/", "^\\.venv/", "^venv/"]
