[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyvisim"
version = "0.4.2"
description = "A Python library for image similarity analysis using Image Encoders and Neural Networks"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Nhat Huy Vu", email = "vunhathuy234@gmail.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "opencv-python",
    "platformdirs",
    "PyYAML",
    "safetensors",
    "scikit-learn",
    "scipy",
    "torch",
    "torchvision",
    "torchaudio",
    "tqdm",
    "requests",
]

# To install PyTorch with CUDA support instead of the CPU-only default:
#   uv pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu124
# Replace cu124 with the CUDA version matching your system (e.g. cu121, cu118).

[project.urls]
Homepage = "https://github.com/MechaCritter/Python-Visual-Similarity"

[tool.setuptools.packages.find]
include = ["pyvisim", "pyvisim.*"]

[tool.setuptools.package-data]
pyvisim = [
    "res/model_files/*.encoder",
    "res/logging_config.yaml",
]

# Dependencies groups to isolate test env from production env
[dependency-groups]
types = [
  "mypy",
]
dead-code = [
  "vulture",
]
fmt = [
  "ruff",
]
test = [
    "pytest",
    "pytest-cov",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
no_implicit_optional = true
check_untyped_defs = true
exclude = ["^build/", "^dist/", "^\\.venv/", "^venv/"]
plugins = ["numpy.typing.mypy_plugin"]

# Third-party libraries that ship without type stubs or a py.typed marker.
[[tool.mypy.overrides]]
module = [
  "scipy.*",
  "sklearn.*",
  "torchvision.*",
  "tqdm.*",
  "yaml.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
]
ignore = [
  "E501",  # line-too-long (handled by the formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.codespell]
ignore-words-list = "Commun"
skip = "./examples"  # jupyter notebooks

[tool.pytest.ini_options]
testpaths = ["tests"]
# Always emit a coverage report at the end of every run, locally and in CI.
addopts = "--cov=pyvisim --cov-report=term-missing"
markers = [
  "slow: tests that download model weights or data (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["pyvisim"]
branch = true

[tool.coverage.report]
show_missing = true
